--- a/localisation/dec1_national_ability_l_english.yml
+++ b/localisation/dec1_national_ability_l_english.yml
@@ -546,6 +546,110 @@
 
  dec1_the_yuan_dynasty: "The Yuan Dynasty"
 
+ ####################
+ # Colonial Nations #
+ ####################
+ 
+  # Alaska
+
+ dec1_chilling_kingdom: "Chilling Kingdom"
+
+  # Australia
+
+ dec1_down_under: "Down Under"
+
+  # Brazil
+
+ dec1_imperial_ambitions: "Imperial Ambitions"
+
+  # California
+
+ dec1_the_golden_state: "The Golden State"
+
+  # Canada <3
+
+ dec1_great_white_north: "Great White North"
+
+  # Cascadia
+
+ dec1_beauty_in_cascadia: "Beaty in Cascadia"
+
+  # Chile
+
+ dec1_chilean_pride: "Chilean Pride"
+
+  # Columbia
+
+ dec1_dreams_of_gran_columbia: "Dreams of Gran Columbia"
+
+  # Cuba
+
+ dec1_cuban_hostilities: "Cuban Hostilities"
+
+  # Florida
+
+ dec1_the_heat_of_florida: "The Heat of Flordia"
+
+  # Haiti
+
+ dec1_independence_movement: "Independence Movement"
+
+  # Illinois 
+
+ dec1_chicago_river: "Chicago River"
+
+  # La Plata
+
+ dec1_kingdom_of_la_plata: "Kingdom of La Plata"
+
+  # Louisiana
+
+ dec1_louisiana_purchase: "Louisiana Purchase"
+
+  # Mexico
+
+ dec1_legacy_of_the_empire: "Legacy of the Empire"
+
+  # Paraguay
+
+ dec1_national_pride_of_paraguay: "National Pride of Paraguay"
+
+  # Peru
+
+ dec1_peruvian_unity: "Peruvian Unity"
+
+  # Quebec
+
+ dec1_northern_republic: "Northern Republic"
+
+  # Sonora
+
+ dec1_mexican_opposition: "Mexican Opposition"
+
+  # Texas
+
+ dec1_lone_star: "Lone Star"
+
+  # United Central America
+
+ dec1_republic_of_hispania: "Republic of Hispania"
+
+  # United States
+
+ dec1_the_land_of_freedom: "The Land of Freedom"
+
+  # Venezuela
+
+ dec1_oil_research: "Oil Research"
+
+  # Vermont
+
+ dec1_english_success: "English Success"
+
+  # Zeelandia
+
+ dec1_new_identity: "New Identity"
+
  ########################
  # Reformable Countries #
  ########################
