--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  # New Countries
- KAB: "Arabian Kingdom"
+ KAB: "Arabia"
  KAB_ADJ: "Arabian"
  BNL: "Benelux"
  BNL_ADJ: "Beneluxian"
