--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -329,7 +329,7 @@
  prussian_nation_title: "@PRU The Kingdom of Prussia"
  prussian_nation_desc: "The Kingdom of Prussia (German: Königreich Preußen) was a German kingdom that constituted the state of Prussia between 1701 and 1918. It was the driving force behind the unification of Germany in 1871 and was the leading state of the German Empire until its dissolution in 1918."
 
- prussian_nation_teutonic_order_title: "@PRU Reform into Prussia"
+ prussian_nation_teutonic_order_title: "@PRU Kingdom of Prussia"
  prussian_nation_teutonic_order_desc: "The age of crusading knights is fading fast. There will come a time when we no longer stand to gain by holding on to the trappings of a monastic order. Besides, the Grandmaster would much rather be a Duke... or King. By reforming into a secular state, we can revitalize our administration and gain the respect of our neighbors."
 
  prussian_nation_brandenburg_title: "@PRU Form the Kingdom of Prussia"
