--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -99,6 +99,9 @@
  ducal_prussia_nation_title: "@DCP Ducal Prussia"
  ducal_prussia_nation_desc: "The Duchy of Prussia also known as 'Ducal Prussia' was a duchy in the region of Prussia established as a result of secularization of the Teutonic Order during the Protestant Reformation in 1525."
 
+ prussian_ducal_prussia_nation_title: "@PRU Declare the Prussian Kingdom"
+ prussian_ducal_prussia_nation_desc: "There is only one king in the Empire, the king of Brandenburg. At the same time our lands in Prussia are not a historic part of the Empire, let us declare ourselves King in Prussia to reflect our grander status than the other electors."
+
  east_prussia_nation_title: "@EPR Foundation of Eastern Prussia"
  east_prussia_nation_desc: "Its capital city was Königsberg. East Prussia was the main part of the region of Prussia along the southeastern Baltic Coast. The bulk of the ancestral lands of the Baltic Old Prussians were enclosed within East Prussia."
 
